--- a/public/profile.html
+++ b/public/profile.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Welcome to the 60 Worlds!</title>
+	<title>Sixty Worlds - Winter Show Prototype!</title>
 	<link rel="stylesheet" href="/style.css">
 	<!-- <script type="importmap">
 		{
@@ -121,7 +121,7 @@
 <body>
 
 	<div class="header-container">
-		<h1>60 Worlds</h1>
+		<h1>Sixty Worlds</h1>
 		<input type="text" id="search-bar" placeholder="Find a world...">
 		<button onclick="window.location.href='/home.html';" class="text-button" ; id="myWorldsButton">My
 			Worlds</button>
