--- a/public/tour.html
+++ b/public/tour.html
@@ -39,13 +39,24 @@
 		import { fetchUserState, getAuthorInfoBySerial, getModelData_Cloud, createConfigUI, createCommentUI, showLoadingGear, hideLoadingGear } from './script.js';
 		import { loadModel } from './load.js';
 		let { isAuthenticated, userInfo } = await fetchUserState()
-		const { serial, blobUrl } = getQueryParams_Serial();
+		const serial = getQueryParams_Serial();
+		// let blobUrl, modelName;
 		let imTheAuthur;
 		let myUID
-		if (userInfo && userInfo.sub) { myUID = userInfo.sub } else { myUID = 'missing' }
-		let authorUID = await getAuthorInfoBySerial(serial);
+		if (userInfo && userInfo.sub) { myUID = userInfo.sub } else { myUID = 'missingUID' }
+
+
+		let authorUID;
+
+		if (serial !== null && serial !== 'missingSerial') {
+			authorUID = await getAuthorInfoBySerial(serial);
+		} else {
+			authorUID = myUID
+		}
 		// let author_name = authorInfo.author_name;
-		let model_Object;
+		let modelObject;
+
+
 
 		/*
 			 ##
@@ -55,7 +66,7 @@
 		 #######
 			 ##
 			 ##
-		Basic Functions
+		Basic Functions - Get the local file when opening
 		*/
 
 		function onWindowResize() {
@@ -66,11 +77,108 @@
 
 		function getQueryParams_Serial() {
 			const params = new URLSearchParams(window.location.search);
-			let serial = params.get('serial') || 'missing';
-			let blobUrl = params.get('blobUrl');
-			return { serial, blobUrl }
+			let serial = params.get('serial') || 'missingSerial';
+			// let blobUrl = params.get('blobUrl');
+			return serial
 		}
 
+		// Step 0: Declare global variables
+		let blobUrl = ''; // Empty by default
+		let modelName = ''; // Empty by default
+		let messageReceived = false
+
+		// Step 1: Safe trigger point for page loading
+		function initializePage() {
+			console.log("Initializing...");
+
+			// Case 1: Check if blobUrl and modelName are already set
+			if (blobUrl && modelName) {
+				console.log('Data already loaded. Using existing variables: ', blobUrl);
+				// preModelLoading();
+				// hideLoadingGear();
+				return;
+			}
+
+			// Case 2: Check sessionStorage for stored model data
+			const storedData = JSON.parse(sessionStorage.getItem('modelData') || '{}');
+			if (storedData.fileData && storedData.modelName) {
+				console.log('Data retrieved from sessionStorage.');
+
+				// Recreate the Blob URL from stored Base64 data
+				const byteCharacters = atob(storedData.fileData.split(',')[1]);
+				const byteNumbers = new Array(byteCharacters.length).fill().map((_, i) => byteCharacters.charCodeAt(i));
+				const byteArray = new Uint8Array(byteNumbers);
+				const blob = new Blob([byteArray], { type: storedData.mimeType });
+
+				blobUrl = URL.createObjectURL(blob); // Create a new Blob URL
+				modelName = storedData.modelName;
+
+				console.log('Blob URL recreated:', blobUrl);
+
+				// Load the model and hide the loading gear
+				// preModelLoading();
+				// hideLoadingGear();
+				return;
+			}
+
+			// Case 3: No data available; wait for message event
+			console.log('[Local] Waiting for message event to receive data.\n[Online] No blobUrl or fileName detected. Waiting for loading with serial');
+		}
+
+		// Step 2: Message event listener
+		window.addEventListener('message', (event) => {
+			messageReceived = true
+			// Security check
+			if (event.origin !== window.location.origin) {
+				console.warn('Untrusted origin:', event.origin);
+				return;
+			}
+
+			// Extract data from the event
+			const { fileName, blob, mimeType } = event.data;
+
+			if (blob) {
+				console.log('File received:', fileName);
+
+				// Convert the Blob to Base64 and store in sessionStorage
+				const reader = new FileReader();
+				reader.onload = function () {
+					const fileData = reader.result; // Base64 string
+
+					// Save the file data and metadata in sessionStorage
+					sessionStorage.setItem(
+						'modelData',
+						JSON.stringify({
+							fileData,
+							modelName: fileName,
+							mimeType,
+						})
+					);
+
+					console.log('File stored in sessionStorage.');
+
+					// Create Blob URL and update variables
+					blobUrl = URL.createObjectURL(blob);
+					modelName = fileName;
+
+					console.log('Blob URL created:', blobUrl);
+
+					// Load the model and hide the loading gear
+					preModelLoading();
+					hideLoadingGear();
+				};
+				reader.readAsDataURL(blob); // Convert Blob to Base64
+			} else {
+				console.error('No file data received.');
+			}
+		});
+
+		// Step 3: Trigger page initialization
+		// initializePage();
+		if (!messageReceived) {
+			initializePage();
+			preModelLoading();
+		}
 
 
 		/*
@@ -92,49 +200,68 @@
 
 
 
-		if (serial === 'missing' || serial === undefined) {//load local
-			const currentDate = new Date();
-			model_Object = {
-				model_url: blobUrl,
-				author_UID: userInfo.sub,
-				author_Name: userInfo.nickname,
-				upload_Date: currentDate,
-				likes: 0,
-			}
-			loadModel(model_Object, false)
-
-		} else {//load cloud,
-			getModelData_Cloud(serial).then(data => {
-				if (data) {
-					model_Object = data
-
-					// Handle the parsed data object
-					// showLoadingGear();
-					loadModel(data, () => {
-						console.log("Model loaded successfully!");
+		function preModelLoading() {
+			if (serial === 'missingSerial' || serial === undefined) {//load local
+				console.log("Loading local model, serial:", serial)
+				if (blobUrl) {
+					const currentDate = new Date();
+					modelObject = {
+						model_name: modelName,
+						model_url: blobUrl,
+						author_UID: userInfo.sub,
+						author_name: userInfo.nickname,
+						upload_date: currentDate,
+						likes: 0,
+					}
+					loadModel(modelObject, () => {
+						console.log("Local model loaded successfully!");
 						hideLoadingGear();
-						// Example function to hide loading UI
-						if (serial == 'missing' || serial == undefined) {
-							authorUID = userInfo.sub
-						}
-
-						if (serial === 'missing' && serial != undefined) {
-							imTheAuthur = true
-						} else {
-							imTheAuthur = authorUID == myUID
-						}
-
-						if (imTheAuthur) {
-							console.log("[Validated] The user is the authur")
-							// createConfigUI(model_Object)
-						} else {
-							console.log("[Validated] The user is Not the authur")
-						}
-						createConfigUI(model_Object)
-						createCommentUI()
+						createConfigUI(modelObject, true)
 					})
+
+				} else {
+					// Wait for 3 seconds before showing the alert if `messageReceived` is true
+					setTimeout(() => {
+						if (!messageReceived) {
+							alert("[ERROR] blobUrl and fileName is missing, Please screenshot this to jiaqi.yi.ny@gmail.com");
+						}
+					}, 3000); // 3000ms = 3 seconds
 				}
-			});
+
+			} else {//load cloud,
+				console.log("Loading online model,serial:", serial)
+				getModelData_Cloud(serial).then(data => {
+					if (data) {
+						modelObject = data
+						console.log(data)
+						// Handle the parsed data object
+						// showLoadingGear();
+						loadModel(data, () => {
+							console.log("Online model loaded successfully!");
+							hideLoadingGear();
+							// Example function to hide loading UI
+							if (serial == 'missingSerial' || serial == undefined) {
+								authorUID = userInfo.sub
+							}
+
+							if (serial === 'missingSerial' && serial != undefined) {
+								imTheAuthur = true
+							} else {
+								imTheAuthur = authorUID == myUID
+							}
+
+							if (imTheAuthur) {
+								console.log("[Validated] The user is the authur")
+								createConfigUI(modelObject, true)
+							} else {
+								console.log("[Validated] The user is Not the authur")
+								createConfigUI(modelObject, false)
+							}
+							createCommentUI()
+						})
+					}
+				});
+			}
 		}
 
 
@@ -180,9 +307,142 @@
 		  ##   ##
 		  ##   ##
 		   #####
+		[UPLOAD]
 		Generate preview, upload file and photo;
 		If interrupted, send a "disable" 
 		*/
+		async function upload(config) {
+			/*
+			When uploading, there should be a preview, a configuration and the file.
+			[1]The config is an object consisting of:
+				{
+				serial: (empty now, done in server later),
+				model_name: (in configUI),
+				author_uid: (=authorUID),
+				upload_date: (empty now, done in server later),
+				starting_set: (in configUI),
+				keywords: (in configUI),
+				likes:0,
+				}
+
+			[2]The preview is a picture:
+				1. screenshot of the three.js render;
+				2. cropped into 3:4;
+				3. named as serial;
+				4. format as jpeg;
+				5. (later)uploaded into aws s3 bucket;
+
+			[3]The file is the file in the blobUrl:
+				1. renamed as serial;
+				2. keep the format of original;
+				3. (later)uploaded into aws s3 bucket;
+			*/
+
+			// Step 1: Generate presigned URLs and serial from the server
+			const { paURL_preview, paURL_model, serial } = await writeToServer(config);
+
+			// Step 2: Process and rename the preview
+			const previewBlob = await createPreviewBlob();
+			const renamedPreviewBlob = new File([previewBlob], `${serial}.jpeg`, {
+				type: 'image/jpeg',
+			});
+
+			// Step 3: Upload the preview to AWS
+			await uploadToAWS(paURL_preview, renamedPreviewBlob);
+
+			// Step 4: Process and rename the file
+			const fileBlob = await fetch(blobUrl).then((res) => res.blob());
+			const renamedFileBlob = new File([fileBlob], `${serial}.${getFileExtension(modelName)}`, {
+				type: fileBlob.type,
+			});
+
+			// Step 5: Upload the file to AWS
+			await uploadToAWS(paURL_model, renamedFileBlob);
+
+			console.log('Upload completed successfully.');
+
+
+
+		}
+		async function writeToServer(config) {
+			/*
+			This frontend function is going to:
+			 1. send the config object to server 
+			 2. get the 2 preAssignedURLs from server to upload the preview and the file;	
+			*/
+			const response = await fetch('/api/getPresignedURLs', {
+				method: 'POST',
+				headers: { 'Content-Type': 'application/json' },
+				body: JSON.stringify(config),
+			});
+
+			if (!response.ok) {
+				throw new Error('Failed to get presigned URLs');
+			}
+
+			return await response.json(); // { paURL_preview, paURL_model, serial }
+
+		}
+
+		function createPreviewBlob() {
+			// Capture the current Three.js render as a canvas
+			const canvas = document.querySelector('canvas');
+			return new Promise((resolve) => {
+				canvas.toBlob((blob) => {
+					resolve(blob);
+				}, 'image/jpeg', 0.8); // JPEG format, 80% quality
+			});
+		}
+
+		async function uploadToAWS(url, blob) {
+			const response = await fetch(url, {
+				method: 'PUT',
+				body: blob,
+			});
+
+			if (!response.ok) {
+				throw new Error(`Failed to upload to AWS: ${response.statusText}`);
+			}
+		}
+
+		function getFileExtension(fileName) {
+			return fileName.slice(fileName.lastIndexOf('.') + 1);
+		}
+
+		function respondToClient(config) {
+			/*
+			This backend function is going to:
+			1. get the serial, which is the number of lines of "/worlds.csv -1", get the current date; 
+			2. add them into the config object, write the config object as an item to the last line of the /worlds.csv;
+			3. generate the preAssignedURLs (does it need the information of the files?)
+			4. send the preAssignedURLs and serials back to client.
+			*/
+
+
+		}
+
+		function fetchConfigFromUI() {
+			// Get the values from the config UI fields
+			const modelName = document.getElementById("model-name").value || "Untitled";
+			const authorName = document.getElementById("author-name").value || "Anonymous";
+			const uploadDate = document.getElementById("upload-date").value || null; // Optional
+			const keywords = document.getElementById("keywords").value.split(",").map((k) => k.trim());
+			const likes = parseInt(document.getElementById("likes").value, 10) || 0;
+
+			// Construct the configuration object
+			const config = {
+				serial: null, // Will be populated by the server
+				model_name: modelName,
+				author_uid: authorUID, // Assuming `authorUID` is available globally
+				upload_date: null, // Will be populated by the server
+				starting_set: {}, // If additional settings are needed, fetch here
+				keywords,
+				likes,
+			};
+
+			console.log("Fetched config:", config);
+			return config;
+		}
 	</script>
 </head>
 
