--- a/public/profile.html
+++ b/public/profile.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Sixty Worlds - Winter Show Prototype!</title>
+	<title>Sixty Worlds - Prototype 1.2</title>
 	<link rel="stylesheet" href="/style.css">
 	<!-- <script type="importmap">
 		{
@@ -13,7 +13,6 @@
 		}</script> -->
 	<script type="module">
 		import { loadPreviews, fetchUserState, updateMyWorldsButton,openUploadWindow } from './script.js';
-		// import { loadModel,goBack,makeThisMyConfig,finalUpload } from './load.js';
 		let currentIndex = 0;
 		const itemsPerPage = 9;
 		const myWorldsButton = document.getElementById('myWorldsButton');
