--- a/public/profile.html
+++ b/public/profile.html
@@ -4,13 +4,13 @@
 <head>
 	<title>Sixty Worlds - Prototype 1.2</title>
 	<link rel="stylesheet" href="/style.css">
-	<!-- <script type="importmap">
+	<script type="importmap">
 		{
 		  "imports": {
 			"three": "../build/three.module.js",
 			"three/addons/": "../jsm/"
 		  }
-		}</script> -->
+		}</script>
 	<script type="module">
 		import { loadPreviews, fetchUserState, updateMyWorldsButton,openUploadWindow } from './script.js';
 		let currentIndex = 0;
